# Asteroids_escrito_em_C

./: CMakeLists.txt  README.md
src/: asteroid.c  background.c  bullet.c  game.c  main.c  player.c  ui.c
src/include/: asteroid.h  background.h  bullet.h  game.h  player.h  ui.h
